fix: id:40258 added wrap prop to flexbox

--- a/src/components/FlexBox/FlexBox.scss
+++ b/src/components/FlexBox/FlexBox.scss
@@ -50,3 +50,13 @@
     align-items: stretch;
     align-content: stretch;   
 }
+
+.noWrap {
+  flex-wrap: nowrap;
+}
+.wrap {
+  flex-wrap: wrap;
+}
+.wrapReverse {
+  flex-wrap: wrap-reverse;
+}
